# drift-base

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  compose-backend.yml  conftest.py  pyproject.toml  pytest.ini  wrap-gunicorn.sh
.github/workflows/: deploy.yaml  test.yaml
alembic/versions/: a4b515b8757c_add_indices_for_fast_match_lookup.py  abbd07ebf2c6_normalize_usernames.py
config/: config.json  gunicorn.conf.py  uwsgi.ini
driftbase/: boto_client.py  counters.py  flexmatch.py  friendships.py  lobbies.py  match_placements.py  matchqueue.py  messages.py  parties.py  players.py  richpresence.py  s3_client.py  sandbox.py
driftbase/api/: apps.py  client_cofig.py  client_config.py  client_configs.py  clients.py  events.py  flexmatch.py  friendships.py  lobbies.py  machines.py  match_placements.py  matches.py  matchmaking.py  messages.py  messages2.py  parties.py  richpresence.py  servers.py  staticdata.py  useridentities.py  users.py
driftbase/auth/: __init__.py  authenticate.py  cognito.py  discord.py  eos.py  epic.py  ethereum.py  facebook.py  gamecenter.py  google.py  jwk.py  oauth.py  oculus.py  psn.py  steam.py  steamopenid.py  twitter.py  util.py
driftbase/exceptions/: drift_api_exceptions.py
driftbase/extensions/: metrics.py
driftbase/flask/: driftbaseapp.py  flaskproxy.py
driftbase/models/: db.py
driftbase/resources/: flexmatch.py  matchmaking.py  staticdata.py
policies/: drift.rego
scripts/: local-alembic.sh  local-provision.sh  local.env
tests/: test_auth.py  test_client_cofig.py  test_client_configs.py  test_clients.py  test_events.py  test_flexmatch.py  test_lobbies.py  test_match_placements.py  test_matches.py  test_matchqueue.py  test_messages.py  test_richpresence.py  test_sandbox.py  test_servers.py  test_staticdata.py  test_useridentities.py  test_users.py
(+45 files in other folders)
