[tool.poetry]
name = "drift-base"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-drift = "0.26.0-rc9"
gevent = "^24.2"
requests = "^2.31"
boto3 = "^1.34"
greenlet = "^3.0"
python-decouple = "^3.8"
python-driftconfig = "^0.5"
psycogreen = "^1.0"
aws-assume-role-lib = "^2.10"
ddtrace = "^2.8"
eth-account = "*"
sqlalchemy = "*"
flask-marshmallow = "*"
siwe = "^4.1"
prometheus-client = "^0.20"

[tool.poetry.group.dev.dependencies]
pytest = "*"
codecov = "^2.1"
pytest-cov = "^4.1"
responses = "^0.25"
mock = "^5.1"

[[tool.poetry.source]]
name = "directive"
url = "https://nexus.directivegames.com/repository/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
